--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 before_install:
     - pip install pep8
 install:
-  - pip install -r requirements.txt
+  - pip install -r mysite/requirements.txt
 # command to run tests
 
 script:
