--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
     - pip install pep8
 install:
   - pip install -r mysite/requirements.txt
+  - pip install flake8
 # command to run tests
 
 script:
