--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -4,6 +4,7 @@ coreapi==2.0.0
 Django==1.10.1
 django-autofixture==0.12.1
 django-bootstrap3==7.0.1
+django-cors-headers==1.2.2
 django-filter==0.14.0
 django-formtools==1.0
 django-rest-swagger==2.0.5
