--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   # maintainers to fix their pypy-dev package.
 # command to install dependencies
 install:
-  - pip install -r mysite/requirements.txt
+  - pip install -r django/mysite/requirements.txt
   - pip install flake8
 
 script:
